--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="pt.br">
+<head>
+     <meta charset="UTF.8">
+     <title>Escola de música</title>
+     <link rel="stylesheet"href="style.css">
+</head>
+<body>
+<p>A História da música é muito antiga, visto que desde os primórdios os homens produziam diversas formas de sonoridade.
+Esse é um tipo de arte que trabalha com a harmonia entre os sons, o ritmo, a melodia, a voz.</p>
 
+<p>Todos esses elementos são importantes e podem nos transportar para outro tempo e espaço, resgatar memórias e reacender emoções
+Veremos.</p>
+ <p>como essa linguagem artística caminhou durante os séculos até os nossos
+ dias para adquirir as características que possui hoje no Ocidente.</p>
+
+
+<p>Quem trouxe a música para o Brasil?
+
+
+A história da música brasileira se inicia com os indígenas e os jesuítas.
+ O encontro entre esses dois povos constituiu no começo da música 
+popular brasileira. A evolução desses ritmos, como o cateretê ou o 
+cantochão, evidencia-se ainda hoje, pois são tocados em festas 
+populares.</p>
+<p>A música brasileira mistura elementos de várias culturas, principalmente as 
+culturas chamadas formadoras, que eram a dos colonizadores portugueses, 
+dos nativos e dos escravos.</p>
+</body>
+</html>
