--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
      <link rel="stylesheet"href="style.css">
 </head>
 <body>
-<p>A História da música é muito antiga, visto que desde os primórdios os homens produziam diversas formas de sonoridade.
+   <p>a historia da musica?
+A História da música é muito antiga, visto que desde os primórdios os homens produziam diversas formas de sonoridade.
 Esse é um tipo de arte que trabalha com a harmonia entre os sons, o ritmo, a melodia, a voz.</p>
 
 <p>Todos esses elementos são importantes e podem nos transportar para outro tempo e espaço, resgatar memórias e reacender emoções
@@ -16,8 +17,6 @@ Veremos.</p>
 
 
 <p>Quem trouxe a música para o Brasil?
-
-
 A história da música brasileira se inicia com os indígenas e os jesuítas.
  O encontro entre esses dois povos constituiu no começo da música 
 popular brasileira. A evolução desses ritmos, como o cateretê ou o 
