--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ Veremos.</p>
 <p>Quem trouxe a música para o Brasil?
 A história da música brasileira se inicia com os indígenas e os jesuítas.
  O encontro entre esses dois povos constituiu no começo da música 
-popular brasileira. A evolução desses ritmos, como o cateretê ou o 
+popular brasileira.</p> 
+<p>A evolução desses ritmos, como o cateretê ou o 
 cantochão, evidencia-se ainda hoje, pois são tocados em festas 
 populares.</p>
 <p>A música brasileira mistura elementos de várias culturas, principalmente as 
