--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
      <link rel="stylesheet"href="style.css">
 </head>
 <body>
-   <p>a historia da musica?
-A História da música é muito antiga, visto que desde os primórdios os homens produziam diversas formas de sonoridade.
+   <h1>a historia da musica?</h1>
+<p>A História da música é muito antiga, visto que desde os primórdios os homens produziam diversas formas de sonoridade.
 Esse é um tipo de arte que trabalha com a harmonia entre os sons, o ritmo, a melodia, a voz.</p>
 
 <p>Todos esses elementos são importantes e podem nos transportar para outro tempo e espaço, resgatar memórias e reacender emoções
@@ -16,8 +16,8 @@ Veremos.</p>
  dias para adquirir as características que possui hoje no Ocidente.</p>
 
 
-<p>Quem trouxe a música para o Brasil?
-A história da música brasileira se inicia com os indígenas e os jesuítas.
+<h1>Quem trouxe a música para o Brasil?</h1>
+<p>A história da música brasileira se inicia com os indígenas e os jesuítas.
  O encontro entre esses dois povos constituiu no começo da música 
 popular brasileira.</p> 
 <p>A evolução desses ritmos, como o cateretê ou o 
@@ -26,5 +26,36 @@ populares.</p>
 <p>A música brasileira mistura elementos de várias culturas, principalmente as 
 culturas chamadas formadoras, que eram a dos colonizadores portugueses, 
 dos nativos e dos escravos.</p>
+<h1>Qual foi o primeiro instrumento musical do mundo?</h1>
+<p>flauta Os historiadores não sabem ao certo quando a música surgiu na humanidade 
+mas consideram que o primeiro instrumento musical inventado foi a flauta - a mais antiga delas
+encontrada por arqueólogos na Alemanha, provavelmente foi produzida há quase 82 mil anos.</p>  
+<h1>A presença da música na história?</h1>
+<p>Foi possível perceber a importância que a música tem na formação e desenvolvimento da humanidade e sociedade como um todo 
+por esta razão, é preciso valorizá-la de modo a aproveitar todos os benefícios que ela promove para todas as idades, perfis e estilos
+é nesse sentido que Sociedade Artística Brasileira trabalha, ou seja, fazendo uso das artes, em especial da música 
+para promover mudanças de vida de comunidade carentes, na região de Belo Horizonte e Betim 
+São vários os projetos que a instituição ministra
+sempre com o objetivo de auxiliar no processo de integração e inclusão de crianças, adolescentes e duas famílias visite nosso site e conheça nossos trabalhos.</p>
+<h1>Ouvir música é uma atitude cotidiana do ser humano?</h1>
+<p>Porque está presente em vários momentos e em diversos lugares ao mesmo tempo, 
+sejam eles no rádio, na TV, na internet.</p> 
+<p>na natureza ou mesmo no meio social (sons de máquinas, ruídos, buzinas de carros e etc.) 
+Com tantos sons ao redor, temos a opção de escolher que tipo de canção queremos ouvir. Em meio ao avanço da tecnologia e de tantos aparelhos móveis, 
+a música circula velozmente ao acesso de todos.</p>
+<p>Como a música é um elemento existente desde a antiguidade, sua linguagem se modifica a cada geração e fato histórico 
+com base nisso, nota-se que esta arte é rica em transmissão de cultura que acontece por meio das canções, das cantigas de rodas e etc 
+Estas, pelo fato de já existirem a muito tempo e por fazerem parte do repertório das crianças, é o que se torna atrativo para as mesmas 
+isso mostra o quanto a música marca presença na vida das crianças a tempos remotos.</p>
+<p>É importante frisar que, no campo educacional é dever da escola e Estado acolher e assegurar educação de qualidade a todos os cidadãos 
+e uma das formas de melhorar a aprendizagem, é descrita nos conteúdos contidos no currículo escolar 
+até o presente momento luta-se para que a música esteja incluída na matriz curricular como disciplina, e não apenas no ensino de arte 
+assim com este recurso incluso na escola facilitará para as melhorias da educação.</p>
+<p>Dessa maneira, nota-se que a música quando presente nas salas de aulas proporciona às crianças momentos de prazer e alegrias
+além de desenvolver habilidades, como: coordenação motora, cognitiva, afetiva e social. É também um rico instrumento pedagógico alfabetizador para a aprendizagem 
+da escuta, da apreciação, da linguagem e para aprender com os impulsos e emoções vivenciadas no dia-a-dia
+portanto, conclui-se que não haveria espaço mais significativo para usar esta arte (música) como requisito de ensino-aprendizagem 
+do que a escola. Pois, é nesta, que o educando tem os primeiros contatos com outras pessoas e aprende a conviver em sociedade 
+com isso, nota-se o quanto é importante à presença constante da música na escola.</p>
 </body>
 </html>
