--- a/index.html
+++ b/index.html
@@ -57,5 +57,35 @@ da escuta, da apreciação, da linguagem e para aprender com os impulsos e emoç
 portanto, conclui-se que não haveria espaço mais significativo para usar esta arte (música) como requisito de ensino-aprendizagem 
 do que a escola. Pois, é nesta, que o educando tem os primeiros contatos com outras pessoas e aprende a conviver em sociedade 
 com isso, nota-se o quanto é importante à presença constante da música na escola.</p>
+
+<h1>Amigo Estou Aqui
+Toy Story</h1>
+
+<p>Amigo, estou aqui!
+Se a fase é ruim
+E são tantos problemas que não tem fim
+Não se esqueça que ouviu de mim
+Amigo, estou aqui!
+Amigo, estou aqui!</p>
+
+<p>Amigo, estou aqui!
+Amigo, estou aqui!
+Os seus problemas são meus também
+E isso eu faço por você e mais ninguém
+O que eu quero é ver o seu bem
+Amigo, estou aqui!
+Amigo, estou aqui!</p>
+
+<p>Os outros podem ser até bem melhores do que eu
+Bons brinquedos são
+Porém, amigo seu é coisa séria
+Pois é opção do coração, viu?</p>
+
+<p>O tempo vai passar
+Os anos vão confirmar
+As três palavras que proferi
+Amigo, estou aqui!
+Amigo, estou aqui!
+Amigo, estou aqui!</p>
 </body>
-</html>
+</html>     
