--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Veremos.</p>
  dias para adquirir as características que possui hoje no Ocidente.</p>
 
 
-<h1>Quem trouxe a música para o Brasil?</h1>
+<p>Quem trouxe a música para o Brasil?</p>
 <p>A história da música brasileira se inicia com os indígenas e os jesuítas.
  O encontro entre esses dois povos constituiu no começo da música 
 popular brasileira.</p> 
@@ -58,8 +58,8 @@ portanto, conclui-se que não haveria espaço mais significativo para usar esta 
 do que a escola. Pois, é nesta, que o educando tem os primeiros contatos com outras pessoas e aprende a conviver em sociedade 
 com isso, nota-se o quanto é importante à presença constante da música na escola.</p>
 
-<h1>Amigo Estou Aqui
-Toy Story</h1>
+<h1>Amigo Estou Aqui</h1>
+<h1>Toy Story</h1>
 
 <p>Amigo, estou aqui!
 Se a fase é ruim
@@ -87,5 +87,6 @@ As três palavras que proferi
 Amigo, estou aqui!
 Amigo, estou aqui!
 Amigo, estou aqui!</p>
+     
 </body>
 </html>     
