--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
      <link rel="stylesheet"href="style.css">
 </head>
 <body>
+     <header>
+            <img scr="musica" alt="imagens sobre a musica">
+      </header>
+
+      <main>
+
+
+
+
+
    <h1>a historia da musica?</h1>
 <p>A História da música é muito antiga, visto que desde os primórdios os homens produziam diversas formas de sonoridade.
 Esse é um tipo de arte que trabalha com a harmonia entre os sons, o ritmo, a melodia, a voz.</p>
@@ -87,6 +97,14 @@ As três palavras que proferi
 Amigo, estou aqui!
 Amigo, estou aqui!
 Amigo, estou aqui!</p>
-     
-</body>
-</html>     
+
+  </main>
+
+
+
+
+   </body>
+   </html>
+   
+
+
