--- a/index.html
+++ b/index.html
@@ -98,7 +98,16 @@ Amigo, estou aqui!
 Amigo, estou aqui!
 Amigo, estou aqui!</p>
 
-  </main>
+<p>Quais são as 20 músicas mais tocadas no momento?</p>
+    <ul>
+<ul>.“Leão” – Marília Mendonça.</ul>
+<ul>.“Nosso Quadro” – AgroPlay & Ana Castela.</ul>
+<ul>.“Bombonzinho” (Ao Vivo) – Israel & Rodolffo, Ana Castela.</ul>
+<ul>.“Erro Gostoso” (Ao Vivo) – Simone Mendes.</ul>
+<ul>.“Eu Gosto Assim “(Ao Vivo) – Gustavo Mioto & Mari Fernandez.</ul>
+<ul>.“Coração de Gelo” – Wiu.</ul> 
+
+</main>
 
 
 
